# mindspace-automation

./: README.md  check_reminders.py  config.py  frontmatter.py  notifier.py  overview.py  pyproject.toml  recurrence.py
src/: config.py  frontmatter.py  icons.py  notifier.py  overview.py
tests/: test_check_reminders.py  test_overview.py
